--- a/platforms/android/app/src/main/assets/www/css/index.css
+++ b/platforms/android/app/src/main/assets/www/css/index.css
@@ -25,7 +25,7 @@ body {
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
     background-color:#E4E4E4;
-    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image:linear-gradient(to right, rgb(119, 160, 107), rgb(199, 224, 191), rgb(119, 160, 107) );
     font-family: system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
     font-size:12px;
     height:100vh;
@@ -35,34 +35,23 @@ body {
     padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-right, 0px);
     text-transform:uppercase;
     width:100%;
+    text-align: center;
 }
 
 /* Portrait layout (default) */
 .app {
-    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
-    position:absolute;             /* position in the center of the screen */
-    left:50%;
-    top:50%;
-    height:50px;                   /* text area height */
-    width:225px;                   /* text area width */
-    text-align:center;
-    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
-                                   /* offset horizontal: half of text area width */
+    padding: 0;
 }
 
 /* Landscape layout (with min-width) */
 @media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
     .app {
-        background-position:left center;
-        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
-        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
-                                      /* offset horizontal: half of image width and text area width */
+        padding: 0;
     }
 }
 
 h1 {
-    font-size:24px;
+    font-size: 1rem;
     font-weight:normal;
     margin:0px;
     overflow:visible;
@@ -70,41 +59,41 @@ h1 {
     text-align:center;
 }
 
-.event {
-    border-radius:4px;
-    -webkit-border-radius:4px;
-    color:#FFFFFF;
-    font-size:12px;
-    margin:0px 30px;
-    padding:2px 0px;
+.title {
+    width: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 100px;
+    margin-bottom: 1rem;
+    border-bottom: black solid 1px;
+    padding: 0;
 }
 
-.event.listening {
-    background-color:#333333;
-    display:block;
+button {
+    margin: 10px;
+    line-height: 1rem;
+    font-size: 1rem;
 }
 
-.event.received {
-    background-color:#4B946A;
-    display:none;
-}
-
-@keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
-}
- 
-@-webkit-keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
-}
- 
-.blink {
-    animation:fade 3000ms infinite;
-    -webkit-animation:fade 3000ms infinite;
-}
 .hide {
     display: none;
+}
+
+.nav_buttons {
+    height: 2rem;
+    float: left;
+    width:50%;
+    font-weight: bold;
+    box-sizing: border-box;
+    bottom: 0px;
+    position: absolute;
+}
+.nav_left {
+    border-right: 1px solid black;
+    left: 0;
+}
+.nav_right {
+    border-left: 1px solid black;
+    right: 0;
 }
